# youbot_gui

./: README.md  values.txt
cv_camera/: CMakeLists.txt
cv_pipeline/: CMakeLists.txt  package.xml
cv_pipeline/launch/: base_movement.launch  canny_edge_detector.launch  control_motor.launch  cv_coordinate.launch  cv_pipeline.launch  main.launch  move_base.launch  move_group_arm.launch  publish_values  start_motor.launch
cv_pipeline/msg/: FloatArray.msg  FloatList.msg
cv_pipeline/scripts/: base_movement.py  base_movement_cv.py  canny_edge_detector.py  cv_coordinate.py  detect_colour.py  move_arm.py  move_base.py  moveit_arm.py  object_movement.py  printing.py
youbot-manipulation/youbot_arm_kinematics_moveit/: CMakeLists.txt
youbot-manipulation/youbot_moveit/config/: fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  youbot.srdf
youbot-manipulation/youbot_moveit/launch/: chomp_planning_pipeline.launch.xml  demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch  youbot.launch
youbot/youbot_description-kinetic-devel/robots/: youbot_nogripper.urdf.xacro
youbot/youbot_driver-hydro-devel/config/: youbot-manipulator.cfg
youbot/youbot_driver-hydro-devel/src/youbot/: YouBotManipulator.cpp
youbot/youbot_driver_ros_interface-hydro-devel/: CMakeLists.txt
youbot/youbot_driver_ros_interface-hydro-devel/debian/: postinst
youbot/youbot_driver_ros_interface-hydro-devel/include/youbot_driver_ros_interface/: YouBotOODLWrapper.h
youbot/youbot_driver_ros_interface-hydro-devel/launch/: youbot_driver.launch
youbot/youbot_driver_ros_interface-hydro-devel/src/: YouBotOODLWrapper.cpp
youbot/youbot_gui/src/: main_window.cpp  qnode.cpp
youbot/youbot_gui/ui/: main_window.ui
(+1 files in other folders)
