<package>
  <name>cv_pipeline</name>
  <version>1.12.23</version>
  <description>cv_pipeline fills the gap between getting raw images from a camera driver and higher-level vision processing.</description>
  <author>Patrick Mihelich</author>
  <author>James Bowman</author>
  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>
  
  <url type="website">http://www.ros.org/wiki/image_pipeline</url>
  <url type="bugtracker">https://github.com/ros-perception/image_pipeline/issues</url>
  <url type="repository">https://github.com/ros-perception/image_pipeline</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>cv_camera</build_depend>
  <build_depend>opencv3</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msg</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Old stack contents -->
  <run_depend>camera_calibration</run_depend>
  <run_depend>image_publisher</run_depend>
  <run_depend>image_rotate</run_depend>
  <run_depend>image_view</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>cv_camera</run_depend>
  <run_depend>opencv3</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msg</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
